# bot_selfcare

./: README.md  main.py  pyproject.toml  requirements.txt
src/: app.py
src/data/: data.csv
